.provarCaches/00D6C0000000xA6UAI/objects/Dataplier__Organisation__c.object
<CustomObject>
    <fields>
        <fullName>Dataplier__HostName__c</fullName>
        <label>HostName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Lattest_Test_Execution_Result__c</fullName>
        <label>Latest Test Execution Result</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dataplier__Organisation_ID__c</fullName>
        <label>Organization ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Organisation_Type__c</fullName>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer/Production</fullName>
                    <default>true</default>
                    <label>Developer/Production</label>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Government cloud org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dataplier__User_Full_Name__c</fullName>
        <description>Full Name of User who authorize the environment</description>
        <label>User Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Username__c</fullName>
        <label>Username</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Org</label>
    <listViews>
        <fullName>Dataplier__All</fullName>
        <columns>NAME</columns>
        <columns>Dataplier__Username__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orgs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>